package io.reflectoring.buckpal.repository;

import io.reflectoring.buckpal.entity.Account;
import io.reflectoring.buckpal.entity.Account.AccountId;
import io.reflectoring.buckpal.entity.Activity;
import io.reflectoring.buckpal.entity.AccountJpaEntity;
import io.reflectoring.buckpal.entity.ActivityJpaEntity;
import lombok.RequiredArgsConstructor;

import jakarta.persistence.EntityNotFoundException;
import org.springframework.stereotype.Repository;

import java.util.List;
import java.util.stream.Collectors;

@Repository
@RequiredArgsConstructor
class AccountRepositoryImpl implements AccountRepository {

	private final AccountJpaRepository accountRepository;
	private final ActivityJpaRepository activityRepository;
	private final AccountMapper accountMapper;

	@Override
	public Account loadAccount(AccountId accountId) {

		AccountJpaEntity account =
				accountRepository.findById(accountId.getValue())
						.orElseThrow(() -> new EntityNotFoundException(
								"Account with ID " + accountId.getValue() + " not found"));

		List<ActivityJpaEntity> activities =
				activityRepository.findByOwner(
						accountId.getValue());

		return accountMapper.mapToDomainEntity(
				account,
				activities);

	}

	@Override
	public List<Account> getAllAccounts() {
		return accountRepository.findAll().stream()
				.map(accountJpaEntity -> {
					List<ActivityJpaEntity> activities =
							activityRepository.findByOwner(
									accountJpaEntity.getId());

					return accountMapper.mapToDomainEntity(
							accountJpaEntity,
							activities);
				})
				.collect(Collectors.toList());
	}

	@Override
	public void updateActivities(Account account) {
		for (Activity activity : account.getActivityWindow().getActivities()) {
			if (activity.getId() == null) {
				activityRepository.save(accountMapper.mapToJpaEntity(activity));
			}
		}
	}

	@Override
	public AccountId createAccount(Account account) {
		AccountJpaEntity accountJpaEntity = new AccountJpaEntity();
		accountJpaEntity.setBaselineBalance(account.getBaselineBalance().getAmount().longValue());
		AccountJpaEntity savedAccount = accountRepository.save(accountJpaEntity);
		return new AccountId(savedAccount.getId());
	}

}
