
@startuml
skinparam classAttributeIconSize 0
hide circle

interface ActivityJpaRepository
class AccountRepositoryImpl
class AccountMapper
interface AccountJpaRepository
interface AccountRepository
class Activity
class ActivityId
class ActivityJpaEntity
class Account
class AccountId
class Money
class ActivityWindow
class AccountJpaEntity
class AccountBalanceController
class AccountSendMoneyController
class AccountWithdrawController
class AccountCreateController
class AccountDepositController
class AccountListAllController
class AccountBalanceService
class AccountDepositService
class AccountListAllService
class AccountWithdrawService
class AccountCreateService
class AccountSendMoneyService

AccountRepositoryImpl ..|> AccountRepository
AccountRepositoryImpl *-- AccountJpaRepository
AccountRepositoryImpl *-- ActivityJpaRepository
AccountRepositoryImpl *-- AccountMapper
AccountRepositoryImpl ..> AccountId
AccountRepositoryImpl ..> Account
AccountMapper ..> AccountJpaEntity
AccountMapper ..> Account
AccountMapper ..> ActivityWindow
AccountMapper ..> Activity
AccountMapper ..> ActivityJpaEntity
AccountRepository ..> AccountId
AccountRepository ..> Account
Activity *-- ActivityId
Activity *-- AccountId
Activity *-- Money
Account *-- AccountId
Account *-- Money
Account *-- ActivityWindow
Account ..> Account
Money --> Money
ActivityWindow o-- Activity
ActivityWindow ..> AccountId
ActivityWindow ..> Money
AccountBalanceController *-- AccountBalanceService
AccountSendMoneyController *-- AccountSendMoneyService
AccountSendMoneyController *-- AccountBalanceService
AccountWithdrawController *-- AccountWithdrawService
AccountWithdrawController *-- AccountBalanceService
AccountCreateController *-- AccountCreateService
AccountDepositController *-- AccountDepositService
AccountDepositController *-- AccountBalanceService
AccountListAllController *-- AccountListAllService
AccountBalanceService *-- AccountRepository
AccountBalanceService ..> Money
AccountDepositService *-- AccountRepository
AccountListAllService *-- AccountRepository
AccountWithdrawService *-- AccountRepository
AccountCreateService *-- AccountRepository
AccountCreateService ..> AccountId
AccountSendMoneyService *-- AccountRepository
@enduml